# QuantStock-AI

./: .gitignore  .gitkeep  ALGORITHM_VALIDATION_UPGRADE_PLAN.md  PROJECT_FIX_PLAN_2026-05-18.md  README.md  app.py  auto_task.py  backtest_v20_system.py  backtest_weekly_swing_v21.py  calc_win_rate.py  check_preds.py  daily_inference.py  daily_inference_v18.py  download_ak_csv.py  eval_v19.py  eval_v19_ensemble.py  eval_win_rate.py  evaluate_model.py  evaluate_model_v17.py  fetch_hs300_qlib.py  fetch_qlib_data.py  infer_afml_v20.py  infer_qlib_v18.py  infer_qlib_v19.py  infer_qlib_v19_ensemble.py  infer_weekly_swing_v21.py  mock_model.py  move_layout.py  news_monitor.py  preflight_check.py  pyproject.toml  qlib_research_demo.py  requirements-ml.txt  requirements-trade.txt  requirements.txt  server_log.txt  start_app.py  start_monitor.bat  trade_manual_executor.py  trade_vnpy_executor.py  (+10 more)
api/: __init__.py  llm_assistant.py  model_adapters.py  model_service.py  routes_market.py  routes_model.py  routes_settings.py  routes_sim_trade.py  strategies.py
data/: __init__.py  market_data.py  pipeline_status.json  screener_status_ai.json  screener_status_tech.json  screener_status_tech.sample.json  sim_account.json  sim_account.sample.json  sim_account_douyin_a.json  stock_names.json
model_output/: daily_predictions.json  features_v16.json  features_v17.json  lgb_model_v16.pkl  lgb_model_v17.pkl  sample_daily_predictions.json  sample_trade_logs.json  trade_logs.json
research/: workflow_lgb_alpha158.yaml
scripts/: daily_ingestion_pipeline.py  dynamic_pool_screener.py  (+9 more)
(+11 files in other folders)
