[project]
name = "quantstock-ai"
version = "2.2.0"
description = "中国A股量化预测系统 (Qlib v17/v18 + 离线O(1)架构)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "flask>=2.0",
    "requests>=2.25.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0,<2.0.0",
    "lightgbm>=3.3.0",
    "scikit-learn>=1.0.0",
    "akshare>=1.0.0",
    "scipy>=1.7.0",
    "pytz>=2021.1",
    "lxml>=4.9.0",
    "beautifulsoup4>=4.11.0",
    "setuptools<=69.5.1",
    "protobuf<=3.20.3",
    "markdown>=3.10.2",
    "openai>=2.36.0",
]

[project.optional-dependencies]
ml = [
    "pyqlib>=0.9.3",
    "tables>=3.6.0"
]
trade = [
    "vnpy>=3.0.0",
    "vnpy_ctp",
    "vnpy_tushare"
]

[tool.uv]
package = false
